fixes for edit on mobile

--- a/src/components/Profile/EditInputs/styles.module.scss
+++ b/src/components/Profile/EditInputs/styles.module.scss
@@ -51,7 +51,7 @@
 }
 
 .phoneInput {
-  width: 98%;
+  width: 97%;
   margin: 0 auto;
   background-color: white;
   padding: 5px;
@@ -89,4 +89,7 @@
 
 .submitButton {
   width: 30%;
+  @media (max-width: 700px) {
+    width: fit-content;
+  }
 }
